<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".RegisterActivity">

        <TextView
            android:id="@+id/tv_register"
            style="@style/LayoutDimen"
            android:background="@color/headerColor"
            android:padding="@dimen/textViewPadding"
            android:text="@string/registration"
            android:textColor="@color/textColor"
            android:textSize="@dimen/registerTextSize"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!--
            using text input layout to create floating label edit text
        -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/layoutMargin"
            android:layout_marginTop="@dimen/layoutMargin"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/first_name"
                android:textSize="@dimen/textSize"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/layoutMargin"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/last_name"
                android:textSize="@dimen/textSize"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/layoutMargin"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/location"
                android:textSize="@dimen/textSize"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/layoutMargin"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone"
                android:textSize="@dimen/textSize"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            style="@style/layoutMargin"
            app:counterMaxLength="20"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:textSize="@dimen/textSize"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_email"
            android:layout_width="match_parent"
            style="@style/layoutMargin"
            android:layout_height="wrap_content"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:textSize="@dimen/textSize"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            style="@style/layoutMargin"
            app:passwordToggleEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:textSize="@dimen/textSize"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <!--
            Radio button for gender
        -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            style="@style/layoutMargin"
            android:layout_marginTop="@dimen/radioMarginTop"/>
        <RadioGroup
            android:id="@+id/radio_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/layoutMargin"
            android:layout_marginTop="@dimen/rgMargin"
            android:layout_marginBottom="@dimen/rgMargin">

            <RadioButton
                android:id="@+id/radio_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:buttonTint="@color/signUpColor"/>

            <RadioButton
                android:id="@+id/radio_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"
                android:checked="true"
                android:buttonTint="@color/signUpColor"/>

        </RadioGroup>
        <!--
            Button to submit the form
        -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_course"
            style="@style/layoutMargin"
            android:layout_marginTop="@dimen/rgMargin"
            android:layout_marginBottom="@dimen/rgMargin"/>

        <CheckBox
            android:id="@+id/java_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/java"
            style="@style/layoutMargin"
            />

        <CheckBox
            android:id="@+id/android_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/android"
            style="@style/layoutMargin"/>

        <CheckBox
            android:id="@+id/animation_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/animation"
            style="@style/layoutMargin"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            style="@style/layoutMargin"
            >

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/url"
                android:textSize="@dimen/textSize"
                android:inputType="textUri" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/rgMargin"
            android:layout_marginTop="@dimen/btnMargintop"
            android:padding="@dimen/btnPadding"
            android:background="@color/signUpColor"
            android:text="@string/sign_up"
            style="@style/layoutMargin"
            android:textSize="@dimen/btnTxtSize" />

        <Button
            android:id="@+id/btn_cancel_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/btnPadding"
            style="@style/layoutMargin"
            android:text="@string/cancel_registration"
            android:layout_marginBottom="@dimen/btnMargintop"
            android:background="@color/cancelRegColor"
            android:textSize="@dimen/btnTxtSize" />
    </LinearLayout>
</ScrollView>